# tweetoscope

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  deployment.py  generate_and_push_images.py  generate_push.py
K8s/: deployment.yml  zookeeper-and-kafka.yml
data/: readme.txt
docker/: Dockerfile.collector  Dockerfile.cpp-main  Dockerfile.cppfile  Dockerfile.dashboard  Dockerfile.estimator  Dockerfile.generator  Dockerfile.learner  Dockerfile.main  Dockerfile.monitor  Dockerfile.predictor  Dockerfile.python  Dockerfile.python-main  requirements.txt  requirements_apt.txt  requirements_python.txt
kafka/: kafka.sh
src/: .swp  readme.md  readme.txt  tweetoscopeGenerator.hpp
src/configs/: collector-build.ini  collector-dep.ini  collector.ini  params-build.config  params-dep.config
src/cpp/: CMakeLists.txt  tweet-Cascade.cpp  tweet-Cascade.hpp  tweet-Processor.cpp  tweet-Processor.hpp  tweet-collector  tweet-collector.cpp  tweet-collector.hpp  tweet-generator  tweet-generator.cpp  tweetoscopeCollectorParams.hpp  tweetoscopeGenerator.hpp
src/cpp/tweet-collector.dSYM/Contents/: Info.plist
src/cpp/tweet-collector.dSYM/Contents/Resources/DWARF/: tweet-collector
src/kafka/config/: server.properties
src/logs/: readme.txt
src/python/: cascade_consumer.py  dashboard.py  estimator.py  fixed_params.py  learner.py  logger.py  monitor.py  predictor.py  simple_predictor.py  utils.py
src/python/logger/: consumer.py  example_logger.py  producer.py
